修正01-06各级标题

--- a/我再也不会把孩子送去学校/00.Content目录.md
+++ b/我再也不会把孩子送去学校/00.Content目录.md
@@ -15,7 +15,7 @@
   - [1.14The Optimization Error优化错误](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_Optimization_Error)
   - [1.15Fostering diversity培养多样性](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fostering_diversity)
   - [1.16Death of knowledge知识的消亡](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Death_of_knowledge)
-  - [1.17Prediction: Death of schooling语言：学校的死亡](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prediction:_Death_of_schooling)
+  - [1.17Prediction: Death of schooling预言：学校的死亡](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prediction:_Death_of_schooling)
 - [2Motto箴言](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Motto)
 - [3Brain science脑科学](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain_science)
 - 4Learn drive学习内驱力
