--- a/我再也不会把孩子送去学校/01.Introduction前言.md
+++ b/我再也不会把孩子送去学校/01.Introduction前言.md
@@ -1,6 +1,10 @@
-# 1 Introduction前言
+# 1 Introduction
 
-## 1.1 Failure of schooling学校教育的失败
+# 前言
+
+## 1.1 Failure of schooling
+
+## 学校教育的失败
 
 Instead of educating, these days schools do a lot of damage to many children. The school was to be the tool of new Renaissance, or new Enlightenment. It has become a tool of oppression that deprives kids of freedom and the love of learning.
 
@@ -18,17 +22,23 @@ I do **not** believe I will convince many parents, educators or authorities. I p
 
 我**不**相信我能说服许多家长、教育工作者或权威人士。我主要希望孩子们能从下而上开始革命。孩子们更开放，他们更了解自己的问题。而且, 考虑到亲情, 他们比我更有可能说服自己的父母。参见：[为什么这本书会失败](https://supermemo.guru/wiki/Why_is_it_hard_to_explain_an_effective_education_system%3F)
 
-## 1.2 Scrapping the school system废除学校制度
+## 1.2 Scrapping the school system
+
+## 废除学校制度
 
 I have spent over two decades in the school system, three decades working in the field of memory and learning, and my whole life learning on my own. The contrast between schools and [self-directed learning](https://supermemo.guru/wiki/Self-directed_learning) is so stark that I wake up daily in disbelief about the survival of the [old Prussian factory school model](https://en.wikipedia.org/wiki/Prussian_education_system). The main thesis of this article is that schooling is the thing of the past. The future will be based on [free learning](https://supermemo.guru/wiki/Free_learning). Before humanity is taken over by artificial intelligence, there is still a lot of room for progress. The human brain has an amazing potential. These days, most of that potential is wasted at school. There is no denying that schools have changed the world for the better. The same can be said about the combustion engine. However, these are the days for scrapping the old technologies and the old systems. It is time for a change.
 
 我在学校里待了二十多年，在记忆和学习领域工作了三十年，我的整个人生都在自学。学校与[自我导向学习](https://supermemo.guru/wiki/Self-directed_learning)之间的反差如此之大，以至于我每天一觉醒来，都不敢相信[古老的普鲁士工厂学校模式](https://en.wikipedia.org/wiki/Prussian_education_system)的存在。这篇文章的主要论点是学校教育已经成为过去。未来将以[自由学习](https://supermemo.guru/wiki/Free_learning)为基础。在人类被人工智能取代之前，还有很大的进步空间。人脑有着惊人的潜力。如今，大部分潜能都被浪费在了学校。不可否认，学校已经把世界变得更好，内燃机也是如此。然而，现在是抛弃旧技术和旧系统的时候了，是时候改变了。
 
-## 1.3 Brain-based reform基于大脑的改革
+## 1.3 Brain-based reform
+
+## 基于大脑的改革
 
 [本书](https://supermemo.guru/wiki/Problem_of_Schooling)运用神经科学的原理，从基础上解释了学习是如何发生的，如何能显著提高学习效率，学校如何阻碍有效学习，以及如何通过全面的学校[改革](https://supermemo.guru/wiki/Reform)来补救。
 
-## 1.4 Love for children对孩子的爱
+## 1.4 Love for children
+
+## 对孩子的爱
 
 Most of my texts bring up old truths that have been reiterated by dozens of great educators and writers of the past and present. You will find echoes, in no particular order, of [Gray](https://supermemo.guru/wiki/Peter_Gray), [Holt](https://supermemo.guru/wiki/John_Holt), [Greenberg](https://supermemo.guru/wiki/Danny_Greenberg), [Mitra](https://supermemo.guru/wiki/Hole_in_the_wall), [Robinson](https://supermemo.guru/wiki/Ken_Robinson), [Locke](https://en.wikipedia.org/wiki/John_Locke), and dozens of others. I amplify the writings of giants with a bit of neuroscience and my own research into efficient learning. See: [My qualifications](https://supermemo.guru/wiki/Problem_of_schooling:_My_qualifications).
 
@@ -50,13 +60,17 @@ I would like to believe that I care about kids no less than Gray or Holt, but I 
 
 我愿意相信，我对孩子们的关心不亚于 Gray 或 Holt ，但我也带来了他们的工作中可能缺失的一个额外议程:我正在寻找一个方案，用于批量培养小诺贝尔奖得主、小研究人员、小工程师和小创造性问题解决者。好消息是，这个方案完全符合自由学习理念，因为没有真正的自由，就没有真正的天才。换句话说，我从纯粹的爱转向了教育事业，这是一个很小的转变，任何孩子都不会因为这种转变而受到伤害。恰恰相反，纯粹的爱能培养出一个健康而有成就的孩子，这就是爱的满足。
 
-## 1.5 Executive Summary执行概要
+## 1.5 Executive Summary
+
+## 执行概要
 
 This book is too long. You can best consume it with [incremental reading](https://supermemo.guru/wiki/Incremental_reading). If this is still too much, go to the [summary](https://supermemo.guru/wiki/Summary) and follow the links to things you disagree with. The ultimate summary is that **schooling undermines the brain potential carried by the young generation**. We can do far better. Not 20% better, not 200% better, far more! I include some numbers in the text.
 
 这本书太长了。您可以通过[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)来最好地阅读它。如果这还样是太多，到[总结](https://supermemo.guru/wiki/Summary)这一章，并遵循链接去阅读你不同意的东西。本书最终的结论是，上学削弱了年轻一代的大脑潜能。我们可以做得更好。不是 20% 更好，不是 200% 更好，而是更多！我在文章中涵盖了一些数字。
 
-## 1.6 Kids are not adults in miniature孩子不是微型的成年人
+## 1.6 Kids are not adults in miniature
+
+## 孩子不是微型的成年人
 
 An important thing to keep in mind when designing a perfect education ecosystem is that a child's brain works according to entirely different rules than an adult's brain. We need to set kids free and never forget that our brains differ, our memories distort the past, and that the kid knows his or her own brain better!
 
@@ -70,7 +84,9 @@ We need to provide kids with conditions for a flourishing [learn drive](https://
 
 我们需要为孩子提供一个蓬勃发展[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的条件，这是[自我导向学习](https://supermemo.guru/wiki/Self-directed_learning)的基础。[自由学习](https://supermemo.guru/wiki/Free_learning)是以学习技能为基础的。在学校学习是一个被动的过程。这种被动阻碍了有效学习中使用的关键技能和习惯。自由在决策中是必不可少的，这是发展必要技能的起点。
 
-## 1.7 Fundamental law of learning学习基本定律
+## 1.7 Fundamental law of learning
+
+## 学习基本定律
 
 Adults claim that kids hate school because they are ignorant of its benefits. They say: "*Children cannot see far enough*". As a result, old folks believe that learning should be imposed in the name of grand educational goals. This might be #1 myth that underlies the concept of schooling. This is extremely dangerous because of the circular feedback between goals and knowledge valuations. As goal valuations are knowledge-based, they cannot be imposed extrinsically. At the same time, acquisition is knowledge-based. Consequently, all learning is incremental. This means that the opposite is true to what many adults believe: **kids are best evaluators of what knowledge fits their current knowledge model**.
 
@@ -84,25 +100,33 @@ The new brain science tells us that there is a [detector of value in the brain](
 
 新的大脑科学告诉我们大脑中有一个[价值检测器](https://supermemo.guru/wiki/Knowledge_valuation_network)。这个检测器对于高质量的学习至关重要。它接受适合于知识模型的有价值的知识，拒绝其他任何东西。世界各地的学校，没有一个国家例外，在很大程度上忽略了这个检测器！通过纠正这个巨大的全球性错误，我们可以提高学习的价值和知识的质量。由于复利的存在，战略的变化具有难以预测的维度。对人类来说，这是一种巨大的潜力，尚未被利用，随时可能爆发。
 
-## 1.8 Message to our future selves给我们未来的自己的信息
+## 1.8 Message to our future selves
+
+## 给我们未来的自己的信息
 
 The biggest effect of schooling, instead of great learning, is the lifelong impact on the loss of interest in further learning. Instead of teaching kids how to learn, the school conditions children to hate school. However, the school ends, and a far worse side effect remains: hate of learning. Luckily, the human mind is inherently [hungry for learning](https://supermemo.guru/wiki/Learn_drive), and most people recover in a span of a decade. Upon recovery, the memory will whitewash the past, and adults will attribute their own successes to schooling. This perpetuates the vicious cycle. Adults do not understand kids. They do not even understand their own brains from years before when they were kids themselves. The memory has no way of sending an accurate message to the future. See: [Schools suppress the learn drive](https://supermemo.guru/wiki/Schools_suppress_the_learn_drive)
 
 教育的最大效果，不是伟大的学习，而是使人对进一步学习丧失兴趣的终生影响。学校没有教孩子如何学习，反而使孩子们讨厌学校。然而，学校结束了，一个更糟糕的副作用仍然存在：讨厌学习。幸运的是，人类的大脑天生[渴望学习](https://supermemo.guru/wiki/Learn_drive)，大多数人在十年内就能恢复。恢复后，记忆会掩饰过去，大人将自己的成功归功于教育。这使恶性循环长期存在。成年人不理解孩子。他们甚至不理解自己的大脑，从多年前他们自己还是孩子的时候。记忆无法向未来发送准确的信息。参见：[学校抑制学习内驱力](https://supermemo.guru/wiki/Schools_suppress_the_learn_drive)
 
-## 1.9 Dangers of early instruction早期教育的危险
+## 1.9 Dangers of early instruction
+
+## 早期教育的危险
 
 Early instruction is particularly dangerous. This [book](https://supermemo.guru/wiki/Problem_of_Schooling) introduces the concept of [toxic memory](https://supermemo.guru/wiki/Toxic_memory), which is monumental for understanding the harm inflicted by schooling. I have seen toxic memories thrive under the impact of [SuperMemo](https://supermemo.guru/wiki/SuperMemo). I saw them grow like you see plants or pet animals grow in your household. The faster we send kids to school, the greater the chance of the damage. Many governments around the world are eager to reduce the school age. They have no clue!
 
 早期教育尤其危险。[本书](https://supermemo.guru/wiki/Problem_of_Schooling)介绍了[有毒记忆](https://supermemo.guru/wiki/Toxic_memory)的概念，这对于理解学校教育造成的危害是非常重要的。我曾见过在 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的影响下，有毒记忆蓬勃发展。我看见它们生长，就像你看见植物或宠物在你家里成长一样。我们越早送孩子上学，受害的可能性就越大。世界上许多国家的政府都渴望降低学龄。他们不知道！
 
-## 1.10 Futility of cramming徒劳的填鸭式
+## 1.10 Futility of cramming
+
+## 徒劳的填鸭式
 
 Cram schools are particularly dangerous. Not only they damage the kids. They may also provide fantastic short-term returns that dazzle the educators with a lesser understanding of neuroscience. This is why many ambitious educators marvel about copying Korean or Singaporean success. Having corrected for cultural differences, I suggest they should look at the correlation between academic success and future creative achievement. For example, see Nobel Prize per capita rankings where "lazy" UK ranks high as opposed to the Asian giants. An even more convincing example should come from biographies of great geniuses of the past: scientists, inventors, and discoverers. We need to study their [unschooling](https://supermemo.guru/wiki/Unschooling) to understand the principles that lead to growing giant creative brains! There is little or no [cramming](https://supermemo.guru/wiki/Cramming) on the path to genius.
 
 填鸭式学校尤其危险。他们不仅伤害孩子。他们也可能提供令人惊叹的短期回报，让对神经科学了解较少的教育工作者感到眼花缭乱。这就是为什么许多雄心勃勃的教育家对复制韩国或新加坡的成功感到惊讶。在纠正了文化差异之后，我建议他们应该看看学业成就和未来创造性成就之间的关系。例如，在诺贝尔奖人均排名中，「懒惰」的英国排名高于亚洲巨人。一个更有说服力的例子应该来自过去伟大天才的传记:科学家、发明家和发现者。我们需要研究他们的[非学校教育](https://supermemo.guru/wiki/Unschooling)来理解那些导致巨大的创造性大脑成长的原理！通往天才的道路上几乎没有[填鸭式的学习](https://supermemo.guru/wiki/Cramming)。
 
-## 1.11 Learning skill impotence学习能力丧失
+## 1.11 Learning skill impotence
+
+## 学习能力丧失
 
 Limited reliance on [self-directed learning](https://supermemo.guru/wiki/Self-directed_learning) at school is like lack of exercise. It turns the intellect into a lazy slob. Many people hate to exercise because of years of neglect. When they resume at the middle age, at some point, exercise can be so pleasurable that it is rediscovered as truly addictive. The same is true of learning.
 
@@ -120,13 +144,17 @@ We can track a golden nugget of knowledge from its source to a big discovery. Fr
 >
 > **学习的自由是培养在获取知识和创造性解决问题方面的高水平技能的关键。**
 
-## 1.12 Grand Education Reform宏大的教育改革
+## 1.12 Grand Education Reform
+
+## 宏大的教育改革
 
 Once we free our own kids to do [free learning](https://supermemo.guru/wiki/Free_learning) we need to free the entire education system. Let all types of schools and ideas thrive (see: [Grand Education Reform](https://supermemo.guru/wiki/Reform)). The incremental and evolutionary school reform process should proceed with an important goal in mind: all brains on the planet should be set free to pursue [free learning](https://supermemo.guru/wiki/Free_learning). After that, barring disaster, only the age of the machines can change the direction of mankind.
 
 一旦我们让自己的孩子[自由学习](https://supermemo.guru/wiki/Free_learning)，我们就需要解放整个教育体系。让所有类型的学校和思想蓬勃发展(参见：[宏大的教育改革](https://supermemo.guru/wiki/Reform))。循序渐进的学校改革进程应该牢记一个重要目标：地球上所有的大脑都应该被解放出来，去追求[自由学习]()。在那之后，除非发生灾难，只有机器时代才能改变人类的方向。
 
-## 1.13 When school is a blessing何时学校是一种眷顾
+## 1.13 When school is a blessing
+
+## 何时学校是一种眷顾
 
 Schools can be a blessing. In a small village in post-Ebola Liberia, in a Rio favela, in a 10-house village in Poland, in the Mathare slum, in post-Taliban Afghanistan, or in a poverty trap of immigrant banlieue, a school is a blessing. It may be an escape from poverty, violence, or abuse. It may be a path to an enlightened future. In my vicinity, kids do drugs when they do not go to school. In a village, 15 km away, their prime entertainment is drinking beer in front of the local shop. In that sense, school is shielding kids from the poisonous effects of inaction, inert community, or pathological family.
 
@@ -140,7 +168,9 @@ At that side of the spectrum, the school is a suppressant of the best qualities 
 
 在这个范围的另一边，学校是人性中最优秀品质的抑制剂。有天赋的人受害最多。
 
-## 1.14 The Optimization Error优化错误
+## 1.14 The Optimization Error
+
+## 优化错误
 
 Progress in schooling is measured by grades and test scores. [PISA](https://en.wikipedia.org/wiki/Programme_for_International_Student_Assessment) tests are the gold standard for international competition. As grading and test scores are largely based on short-term learning for short-term results, we optimize in a highly harmful direction. We optimize for [cramming](https://supermemo.guru/wiki/Cramming), not for learning. Much less attention is paid to how much kids actually bring out from school. Perfect knowledge of history on the test day may translate to [vestigial knowledge of history on the last day of school](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning).
 
@@ -166,7 +196,9 @@ The problem with optimization of education is that, ideally, we should make incr
 
 优化教育的问题在于，理想情况下，我们应该在今天进行渐进修正，并衡量 30 - 50 年后的结果。这就是为什么有效的优化教育必须依赖于从学习理论推导出来的模型。幸运的是，这些模型生成了一个相对简单的画面。大脑已经配备了所有的工具，可以轻松地完成我们今天认为不可能完成的事情。
 
-## 1.15 Fostering diversity培养多样性
+## 1.15 Fostering diversity
+
+## 培养多样性
 
 [Homeschooling](https://supermemo.guru/wiki/Homeschooling) provides good grounds for [free learning](https://supermemo.guru/wiki/Free_learning). A frequent complaint about homeschoolers and unschoolers is that they are weird or [poorly socialized](https://supermemo.guru/wiki/Optimal_socialization). That complain ignores the fact that the opposite of weird is homogenized, faceless, and uninteresting. The opposite of society built on all colors of education and knowledge is North Korea. And for the sake of healthy variety, we need the example of North Korea too. At least to cherish our freedoms and learn a thing or two about what makes people and societies happy.
 
@@ -176,7 +208,9 @@ When I promote English as the unifying language for the world, a friend joked th
 
 当我提倡英语作为世界的统一语言时，一个朋友开玩笑说，我不如为世界推广一种品牌的啤酒。我需要强调的是，我们总是需要平衡标准与多样性。一种面向世界的语言是全球交流的重要工具。多样化的教育对知识的发展至关重要。为了人类知识不受限制地增长，我们需要良好的获取知识的途径，良好的交流，一种全球性的语言也应该为这一目标服务。
 
-## 1.16 Death of knowledge知识的消亡
+## 1.16 Death of knowledge
+
+## 知识的消亡
 
 Great people have great visions. However, great visions often fail to materialize and die with their fathering visionaries.
 
@@ -206,7 +240,9 @@ My [book](https://supermemo.guru/wiki/Problem_of_Schooling) will [fail](https://
 
 我的[书](https://supermemo.guru/wiki/Problem_of_Schooling)要[失败](https://supermemo.guru/wiki/Why_is_it_hard_to_explain_an_effective_education_system%3F)了。如果诺贝尔奖得主[米尔顿•弗里德曼](https://en.wikipedia.org/wiki/Milton_Friedman)（Milton Friedman）在[择校方面的选择](https://supermemo.guru/wiki/School_choice)仍被忽视或误解，我突破冷漠或无知之墙的机会有多大?我在社交媒体上看到了一些机会，也看到了世界各地的在家学习者、不上学者、民主学校和[自由学习](https://supermemo.guru/wiki/Free_learning)者集体智慧的力量。我从被奴役的年轻人的叛逆本性中看到了机会。
 
-## 1.17 Prediction: Death of schooling预言：学校教育的消亡
+## 1.17 Prediction: Death of schooling
+
+## 预言：学校教育的消亡
 
 Radical dreams of Holt, Gatto, and Illich will come true soon. Not for whole societies though. One job of schooling will likely not end: schools will remain containers for storing kids while parents are at work. For this to change, we would need to take a collective breath, reprioritize, slow down, and take a more creative approach to life. I am not optimistic. The rush will continue.
 
