--- a/我再也不会把孩子送去学校/02.Motto箴言.md
+++ b/我再也不会把孩子送去学校/02.Motto箴言.md
@@ -1,4 +1,6 @@
-# 2 Motto箴言
+# 2 Motto
+
+# 箴言
 
 It is pretty tragic to see that many solutions have already been known for centuries, but they keep getting overlooked. I chose the words of [John Locke](https://en.wikipedia.org/wiki/John_Locke)(1963) as the motto for this text:
 
