--- a/我再也不会把孩子送去学校/04.Learn drive学习内驱力.md
+++ b/我再也不会把孩子送去学校/04.Learn drive学习内驱力.md
@@ -1,10 +1,14 @@
-# 4 Learn drive学习内驱力
+# 4 Learn drive
+
+# 学习内驱力
 
 Learn drive is the neural mechanism by which the brain assembles the [jigsaw puzzle](https://supermemo.guru/wiki/Jigsaw_puzzle) of world knowledge.
 
 学习内驱力是大脑用于组织全世界知识的[拼图游戏](https://supermemo.guru/wiki/Jigsaw_puzzle)的神经机制。
 
-## 4.1 Definition定义
+## 4.1 Definition
+
+## 定义
 
 The term **learn drive** is essential for proving the inefficiency of [schooling](https://supermemo.guru/wiki/Problem_of_Schooling).
 
@@ -14,7 +18,9 @@ The term **learn drive** is essential for proving the inefficiency of [schooling
 >
 > **学习内驱力是大脑寻求新信息的一种自然倾向。**学习内驱力是由大脑中固定的引导系统产生的。该引导系统根据检测记忆存储中的新模式，激活奖励中枢。
 
-## 4.2 Terminology术语
+## 4.2 Terminology
+
+## 术语
 
 I purposefully avoid the term curiosity, which is often used in psychology. Without precise understanding of the mechanisms of the learn drive, my whole reasoning against the present school system would collapse. The need for a simple and precise term will become clearer when I explain why I do not want to employ other established terms that might easily be misconstrued.
 
@@ -74,7 +80,9 @@ In terms of neural networks, the learn drive can be run by very simple mechanism
 
 **猎奇**是心理学和行为科学中广泛应用的概念。它经常与好奇心混淆。然而，它的正确位置在于特质理论。猎奇与冲动、刺激或感觉追求相关。并且它被视为一种可能导致行为问题的特质。与此相反，学习内驱力是人类最纯粹的需求，它使我们成为发明家和发现者。猎奇是[ Cloninger 人格模型](https://en.wikipedia.org/wiki/Temperament_and_Character_Inventory)的一部分。在一些性格测试中，它是外向性的一部分。它是遗传的，与多巴胺受体有关，它可能会把你送上珠穆朗玛峰。它可能与药物滥用有关。与 [D4 受体](https://en.wikipedia.org/wiki/Dopamine_receptor_D4)基因相关的形形色色的报告被解释为心理学家们对猎奇究竟是什么缺乏共识。学习内驱力是普遍的，是与生俱来的，但它也高度依赖于记忆的状态，即它是由经验塑造的。
 
-## 4.3 Novelty and stress新奇和压力
+## 4.3 Novelty and stress
+
+## 新奇和压力
 
 In a lab, rats can be scared into novelty seeking. When a rat senses the smell of a predator, it will double its efforts to find a novel way out of its environment. This behavior shows a possible confusion between the innate drive and the induced drive. Rats behavior will depend on the balance between novelty seeking and the fear of risk. In other words, it is a balance between the search for the new and the fear of the new. One might wrongly use such rat experiments to conclude that kids might be scared into learning. The opposite is true. [Chronic stress is one of the prime destroyers of the brain](https://supermemo.guru/wiki/Stress_resilience). It is a prime enemy in development, and prime suppressors of the learn drive. We then have a confusion between novelty seeking (behavior) and novelty seeking (instinct). Some procedures may increase the behavior without changing the instinct. You may scare an animal into novelty seeking (increase in behavior) while actually suppressing the instinct in the long term (instinct suppression). The attraction to the new and the fear of the new will always be present. In optimization of education, we need to focus on the attraction part, and eliminate the fear part. The learn drive is part of the attractive force in novelty seeking.
 
@@ -88,7 +96,9 @@ Anxiety may suppress or enhance exploration. If a child fears dark woods, its ex
 >
 > 学习内驱力是获得新知识的一种天生本能。所有健康的学生都有学习内驱力。这是一股改变世界的好力量。
 
-## 4.4 Suppression of the learn drive学习驱力的抑制因素
+## 4.4 Suppression of the learn drive
+
+## 学习驱力的抑制因素
 
 **Boredom** can now be redefined as the absence of reward from the learn drive system. A healthy brain will resist boredom, and perceive it as a penalty. Children at school are gradually conditioned to tolerate boredom via the mechanism of [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive).
 
@@ -98,7 +108,9 @@ I will try to show how we systematically undermine the learn drive by [the way w
 
 我将试图通过[我们对待新生儿和初学走路的孩子的方式](https://supermemo.guru/wiki/Baby_management)来展示我们是如何系统性地削弱学习内驱力的。我们继续采用低质量的日托，最终以义务教育的方式破坏学习内驱力。到了高中毕业的时候，学习内驱力往往已经完全被摧残而退化了。这往往被错误地归因于衰老过程，甚至被归咎于自然发展。这是一个危险的谎言。**学习内驱力可以为70多岁的老人提供和7岁孩子一样多的动力。**我将解释学习内驱力是如何做到的。
 
-## 4.5 Further reading延伸阅读
+## 4.5 Further reading
+
+## 延伸阅读
 
 For a good discussion of curiosity theories, see:
 
@@ -111,7 +123,9 @@ For a good discussion of curiosity theories, see:
 
 - [好奇心与探索](http://www.csun.edu/~vcpsy00h/students/explore.htm)
 
-## 4.6 Summary: Learn drive总结：学习内驱力
+## 4.6 Summary: Learn drive
+
+## 总结：学习内驱力
 
 - learn drive is a natural tendency of the brain to seek new information
 - 学习内驱力是大脑寻求新信息的一种自然倾向
