--- a/我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
+++ b/我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
@@ -1,6 +1,10 @@
-# 6 Learn drive and reward学习内驱力和奖励
+# 6 Learn drive and reward
 
-## 6.1 The main problem in education教育中的主要问题
+# 学习内驱力和奖励
+
+## 6.1 The main problem in education
+
+## 教育中的主要问题
 
 The main problem with regards to education is the belief that learning may cause displeasure, and that this displeasure should be [endured](https://supermemo.guru/wiki/The_grind_is_the_glory) to achieve more learning.
 
@@ -30,7 +34,9 @@ Chances are you are skeptical of my words, as the myth of unpleasant learning is
 
 你可能对我的话持怀疑态度，因为不愉快学习的错误观念是[学校教育](https://supermemo.guru/wiki/Schooling)的一个强有力的副作用。因此，本章试图说服你。消除这个错误观念所需要的只是理解大脑中编码新知识的简单机制。
 
-## 6.2 Learn drive and entropy学习内驱力和熵
+## 6.2 Learn drive and entropy
+
+## 学习内驱力和熵
 
 The concept of entropy is helpful in understanding why most kids do not learn much at school.
 
@@ -60,7 +66,9 @@ Today, we can finally test the response of the brain to information entropy. Neu
 
 今天，我们终于可以测试大脑对信息熵的反应了。神经影像显示[前海马对视觉信息熵有反应](https://www.ncbi.nlm.nih.gov/pubmed/15896570)，[腹侧纹状体](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3403290/)也有类似的发现。因此，我们现在可以肯定大脑对信息熵有反应。熵感受器在扫描环境寻找学习机会时非常重要。这是奖励的前奏，而奖励是[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的基础。
 
-## 6.3 Prior knowledge in information seeking信息搜寻中的预备知识
+## 6.3 Prior knowledge in information seeking
+
+## 信息搜寻中的预备知识
 
 We need to distinguish between information and meaning. Entropy is not a good measure of the latter. The measure of meaning must involve the brain itself in addition to the information channel metric. Prior knowledge is essential in learning. Imagine that in your search for an interesting channel on the radio you find a news service. If the service is delivered in Thai and you do not speak Thai, you will prefer a service delivered in English. In information sense, news channels may have the same entropy, yet your prior knowledge will make you opt for the English channel. While the Thai channel delivers a stream of sounds, the English channel delivers a stream of [concepts](https://supermemo.guru/wiki/Abstract_knowledge). Without understanding the knowledge of the recipient, information entropy tells us little. We cannot determine a signal-to-noise ratio.
 
@@ -70,7 +78,9 @@ Every listener will have his or her own preferred level of information entropy. 
 
 每个听者都有自己偏好的信息熵水平。对于大多数音乐爱好者来说，迪斯科或电子乐的常规节拍要比单独的鼓声有趣一些。这种类型的音乐承载着更高的平均信息量。对于一个更老练的听众来说，有一点切分音是将更受欢迎的。然而，切分音需要一定程度的预先学习。那些对音乐了解较少的人可能会被增加的节奏复杂性弄糊涂。如果节拍中有太多的信息，[就不可能随着音乐起舞](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)。对于一般人来说，温顿·马萨利斯的天才可能很难被察觉。顶级爵士音乐只为一小部分受过高等教育的听众准备，就像大多数人一样，随着复杂性的增加，音乐慢慢向无线电杂音的方向衰变。
 
-## 6.4 Entropy detectors in the brain大脑中的熵检测器
+## 6.4 Entropy detectors in the brain
+
+## 大脑中的熵检测器
 
 The brain cannot effectively detect the entropy of the signal hitting the retina or the eardrum. Like pixels of a monitor, retinal cells are not aware of what they display. If the detector, such as the hippocampus, is to light up in response to entropy, it must operate on the inputs from the entorhinal cortex (i.e. the input to the hippocampus itself). Those inputs will present the signal after a high degree of processing. Instead of pixels, it may present a concept. A high entropy signal at the sensory inputs will lose most of its noise component early in the process of neural selection, completion, and [generalization](https://supermemo.guru/wiki/Generalization). The signal-to-noise ratio will determine how much information is lost. The bigger the noise, the bigger the loss. The smarter we are, the more selective this processing will be and the more information will be lost at that stage. That's good. We become blind to detail. Pattern recognition will act like a deterministic function, which by definition, results in a drop in entropy. Complex patterns may become simple concepts. Those concepts will provide the actual input to the detector, e.g. the hippocampus.
 
@@ -84,7 +94,9 @@ The above reasoning explains why both low and high entropy sensory signals can b
 
 上面的推理解释了为什么低熵和高熵的感觉信号都是无趣的。经过一定程度的处理后，高熵信号可能会失去所有噪声，并向海马体传递低熵输入。然后，我们观察感官输入时「最佳熵」水平的错觉。我们需要一个新的概念，**学习熵**，来帮助我们准确地判断信号的吸引力。学习熵需要考虑信息的高度处理，然后才能激活大脑中的奖励中心。本文稍后将讨论[学习熵](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy)。
 
-## 6.5 Speed of information processing信息处理速度
+## 6.5 Speed of information processing
+
+## 信息处理速度
 
 An under-appreciated factor in sensory information scanning is the speed of information processing in the brain.
 
@@ -102,7 +114,9 @@ In schools, all too often, the speed of delivery surpasses student's processing 
 
 在学校里，传授的速度常常超过学生的处理能力。这导致了微不足道的学习和强大的压力。没有时间[欣赏高速列车窗外的风景](https://supermemo.guru/wiki/Futility_of_schooling)。在麻省理工学院，他们称之为「[*用消防水管喝水*](https://supermemo.guru/wiki/Futility_of_schooling)」。
 
-## 6.6 Probability vs. knowledge概率与知识
+## 6.6 Probability vs. knowledge
+
+## 概率与知识
 
 Low probability events carry more information. Average information determines entropy. Prior knowledge determines the perception of an information channel's entropy.
 
@@ -120,7 +134,9 @@ If you love Janet-like gossip, the channel rich in that gossip will provide the 
 
 如果你喜欢 Janet 式的八卦，那么这个八卦频道会给你带来恰到好处的意外。它将提供学习匹配。如果你缺乏相关知识或者你的优先级不同，你就会对它置之不理。你的学习重点也将决定你在特定领域的知识水平，以及你对任何特定渠道及其信息熵的反应。
 
-## 6.7 Predictability and surprisal可预见性和意外
+## 6.7 Predictability and surprisal
+
+## 可预见性和意外
 
 Probability and complexity are not the only components in information perception. We seem to look for a balance between predictability and surprise. I like funk. In this type of music, the bassline is often highly predictable with the [optimum dose of syncopation](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music). It makes it easy to synchronize the body motion with the rhythm. However, funk would not be interesting if it did not carry surprise. This is where the sophisticated jazz riffs tickle the neural system responsible for the detection of surprisal. In addition, after decades of learning, there is a whole database of signals that my brain responds to. There may be that one backup singer voice that I recognize and like. My brain is ready for funk.
 
@@ -142,7 +158,9 @@ Metaphorically, you can imagine this as the information channel massaging your t
 
 打个比方，你可以想象这是一个信息渠道，修剪你的知识之树，并添加新的分支，就像一个陶工在他完美塑造的作品上添加[新的粘土层](https://supermemo.guru/wiki/Jigsaw_puzzle_metaphor)一样。
 
-## 6.8 Detecting surprisal检测意外
+## 6.8 Detecting surprisal
+
+## 检测意外
 
 Human [learn drive](https://supermemo.guru/wiki/Learn_drive) is based on detecting [surprisal](https://en.wikipedia.org/wiki/Self-information). We have known that for ages. All models of human and machine learning involve that concept under different names. [Piaget](https://en.wikipedia.org/wiki/Jean_Piaget) wrote about [schemata](https://en.wikipedia.org/wiki/Jean_Piaget#Schema) that fall into disequilibrium under the impact of surprisal. In his models of the neocortex, [Jeff Hawkins](https://en.wikipedia.org/wiki/Jeff_Hawkins)speaks of prediction errors that underlie learning and intelligence. I like to speak of models, and their elaboration (when new information fits the model), or contradiction (when new information requires changes to the model).
 
@@ -204,7 +222,9 @@ The anticipation would follow the detection of a high [learntropy](https://super
 
 在预期检测到一个高[学习熵](https://supermemo.guru/wiki/learntropy)信号后，就会产生对高价值信息的积极追求。海马体检测到一条信息后，可能会同时将相关的学习信息发送到大脑皮层，并向快乐中心发送奖励信号。这将意味着学习新东西的时刻！
 
-## 6.9 The wow factor「哇！」因子
+## 6.9 The wow factor
+
+## 「哇！」因子
 
 In the summer of 1977, while looking for extraterrestrial intelligence, SETI researchers discovered an unusual radio signal coming from [Sagittarius](https://en.wikipedia.org/wiki/Sagittarius_(constellation)). In the bland low-level noise of cosmic space the signal was highly unlikely. Low probability marks high surprisal. Astronomer Jerry Ehman circled 6 letters corresponding with the signal on a printout and mark it with "Wow!".
 
@@ -244,9 +264,13 @@ A creative process will also produce rewards. An association deemed useful is re
 
 一个创造性的过程也会产生奖励。一个被认为有用的联想是有回报的。一个能解决难题的联想更有价值。显然，奖励是有等级的。该系统可以量化信息、联想或解决方案的概率。概率越低，奖励越高。
 
-## 6.10 Knowledge valuation network知识评估网络
+## 6.10 Knowledge valuation network
 
-### 6.10.1 Knowledge valuations知识的评估
+## 知识评估网络
+
+### 6.10.1 Knowledge valuations
+
+### 知识评估
 
 All granular pieces of knowledge processed by the brain are instantly evaluated for their relevance, [coherence](https://supermemo.guru/wiki/Coherence), and value. We instantly know if information is understandable and useful. We also often instantly notice when it is [inconsistent](https://supermemo.guru/wiki/Consistency), [incoherent](https://supermemo.guru/wiki/Coherence) or irrelevant.
 
@@ -278,7 +302,9 @@ In computational terms, knowledge valuation network can be compared to a [decisi
 >
 > **图**: *xefer是一种工具，有助于将知识理解为网络。它依赖维基百科文章之间的语义链接。[试试看](https://xefer.com/wikipedia)*
 
-### 6.10.4 Valuation network in education教育中的评估网络
+### 6.10.4 Valuation network in education
+
+### 教育中的评估网络
 
 The brain builds a valuation network in the course of learning over years and decades. Through optimization in sleep and via [forgetting](https://supermemo.guru/wiki/Forgetting_curve), the network is polished and smoothed up for efficient operation. This makes it easy to take valuation shortcuts. A student choosing a book may no longer see his exam in the full context of his whole life. He might have developed a quick shortcut: "*In the next 3 months, all I want to do is to pass geology*".
 
@@ -316,7 +342,9 @@ Where I speak of golden nuggets of knowledge, Peter Thiel speaks of the [power l
 >
 > **对学习的小投资**可以给个人生活和整个地球带来**巨大的变化**！
 
-### 6.10.5 Knowledge valuation that affects the course of life影响生命过程的知识评估
+### 6.10.5 Knowledge valuation that affects the course of life
+
+### 影响生命过程的知识评估
 
 > Personal anecdote. [Why use anecdotes?](https://supermemo.guru/wiki/Why_use_anecdotes%3F)
 >
@@ -356,7 +384,9 @@ I would not trade my present life for any other type of career in research or in
 
 
 
-## 6.11 Learntropy学习熵
+## 6.11 Learntropy
+
+## 学习熵
 
 There are many factors that affect how messages and information channels are perceived and valued by the brain. In preceding sections we have noticed that the brain does not respond just to entropy. There are many factors that modulate the impact of entropy or surprisal of individual messages. Those factors include: encoding, speed of delivery, pre-processing (e.g. generalization, completion, recognition, etc.), prior knowledge (incl. valuation, emotional valence, channel reliability, etc.), optimum level (affected by speed of processing), and more.
 
@@ -386,7 +416,9 @@ High knowledge valuations contribute to high [learntropy](https://supermemo.guru
 
 高知识估值导致高[学习熵](https://supermemo.guru/wiki/learntropy)，而学习熵又为长期记忆知识的注意力和语义插入提供了必要条件。在强大的反馈循环中，**学习熵增强了[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，这是决定学习熵的估值的基础。**这种反馈循环通过遗忘、习得性无助、衰老、伤害和精神资源的纯粹可用性来控制。通过合理的学习和生活方式管理，特别是[自然创造力循环](https://supermemo.guru/wiki/Natural_creativity_cycle)，这种平衡可以在高[学习内驱力](https://supermemo.guru/wiki/Learn_drive)水平上保持几十年。
 
-## 6.12 Signal timing vs. learntropy信息时机与学习熵
+## 6.12 Signal timing vs. learntropy
+
+## 信息时机与学习熵
 
 The degree of reward obtained from individual messages in the learning stream will determine the level of signal learntropy. A lecture on a boring topic will carry low learntropy. Surfing the net for titbits of information needed to solve a specific problem will carry high learntropy.
 
@@ -412,7 +444,9 @@ You can quickly answer this instant quiz about your own [learn drive](https://su
 
 你可以快速回答这个关于你自己的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的即时测验。如果你在生活中遇到一个小问题，你是寻求人类专家还是依赖谷歌？如果你的车出故障，或者你的电脑崩溃，或者你受伤，或者你胃痛，你会去哪里？
 
-## 6.13 Learntropy and learn drive学习熵和学习内驱力
+## 6.13 Learntropy and learn drive
+
+## 学习熵和学习内驱力
 
 In a process similar to [forgetting](https://supermemo.guru/wiki/Forgetting_curve), the impact of [learntropy](https://supermemo.guru/wiki/Learntropy) reward will decline exponentially over time. Like in [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) review, the new reward will bring back learntropy to a high level. Like in a [spacing effect](https://supermemo.guru/wiki/Spacing_effect), longer breaks may result in the same message being more rewarding.
 
@@ -434,7 +468,9 @@ Learntropy will determine the [learn drive](https://supermemo.guru/wiki/Learn_dr
 
 学习熵将决定[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，但两者将以不同的规则来维持。学习内驱力依赖于知识，因此将受到[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的影响。由于知识是一个网络，所以说学习内驱力的最佳激励可能是没有意义的。为了最大限度地提高学习内驱力，我们应该终身学习，尊重[自然创造力周期](https://supermemo.guru/wiki/Natural_creativity_cycle)，并注意大脑的健康（即一般的健康）。
 
-## 6.14 Optimum information delivery最佳信息传授
+## 6.14 Optimum information delivery
+
+## 最佳信息传授
 
 In schooling, we might envisage a lecture delivered at optimum [learntropy](https://supermemo.guru/wiki/Learntropy) level, in which a student keeps saying "*wow! wow!*". She keeps taking down notes as fast as humanly possible. More often though, the lecture will buzz a high entropy signal or ooze boredom. Its learntropy will be low or even negative.
 
@@ -476,7 +512,9 @@ This is explained using a [crystallization metaphor](https://supermemo.guru/wiki
 
 这是可以用[结晶比喻](https://supermemo.guru/wiki/Knowledge_crystallization)来解释。奖励系统的神经学细节在以下一节中介绍：[学习奖励](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_rewards)。
 
-## 6.15 Gripping lectures令人全神贯注的讲课
+## 6.15 Gripping lectures
+
+## 令人全神贯注的讲课
 
 We love learning, but we usually hate to be taught. Those feelings correlate with creativity, which can probably be explained by the fact that creative elaboration is essential for [pattern completion](https://supermemo.guru/wiki/Pattern_completion) that underlies comprehension.
 
@@ -510,7 +548,9 @@ I choose my video materials mostly on the basis of speakers who I just love to l
 
 我主要根据我喜欢听的演讲者来选择我的视频材料。在这篇文章的背景下，我知道你会喜欢 Ken Robinson 的演讲！去看看：[Ken Robinson：学校扼杀创造力](https://supermemo.guru/wiki/Robinson:_Schools_kill_creativity)！
 
-## 6.16 Learning rewards学习奖励
+## 6.16 Learning rewards
+
+## 学习奖励
 
 The pleasure of learning might be one of the most satisfying possible pleasures. As opposed to eating or having sex, the pleasure of learning does not terminate with the act. The pleasure of learning is sustainable and wanes slowly only with the overload of networks involved in learning. It can be reset back to the baseline with sleep. The pleasure of learning has been shown to involve the same mechanisms as the [pleasure of heroin or cocaine](https://supermemo.guru/wiki/Biederman_model). Unlike feeding or sex, pleasurable learning can fill most of the waking time. In that sense, the pleasures of learning, creativity, problem solving, and productivity might be great tools in stoic hedonic therapy. Whereas the need for food is easily satisfied in a healthy individual, the need for learning may never end. The [learn drive](https://supermemo.guru/wiki/Learn_drive) depends on the status of current knowledge and this status can be manipulated with learning itself.
 
@@ -520,7 +560,9 @@ The pleasure of learning might be one of the most satisfying possible pleasures.
 >
 > **所有情绪波动的人都应该把学习当作治疗。**
 
-### 6.16.1 Learn drive reward学习内驱力奖励
+### 6.16.1 Learn drive reward
+
+### 学习内驱力奖励
 
 I have mentioned a couple of examples of how the [learn drive](https://supermemo.guru/wiki/Learn_drive) leads to a reward signal in the brain. We know that low probability information can be rewarding. So can a generalization that contributes new knowledge. A snippet of information that leads to a great goal of understanding is highly valued. A [missing piece in a jigsaw puzzle](https://supermemo.guru/wiki/Jigsaw_puzzle_metaphor) carries a great reward. One obscure word, once decoded, can make a whole long text switch from a tangle of sentences into a clear line of reasoning.
 
@@ -546,7 +588,9 @@ In our quest to understand reality, while the total amount of information stored
 
 在我们寻求理解现实的过程中，随着大脑中储存的信息总量增加，储存的知识的熵就会下降。**随着不断学习和建模，理解世界的复杂性所需的努力越来越少。**
 
-### 6.16.2 Evolution of the learn drive学习内驱力的进化
+### 6.16.2 Evolution of the learn drive
+
+### 学习内驱力的进化
 
 Scientists say that smart animals play more. I say that it is even more interesting to note that species that play more are smarter. I hypothesize that the **learn drive may have been the trigger factor in the explosion of the human brain size**. It is not that birds or mammals faced a change in environment that required more thinking. It is not that humans suddenly faced extinction had they not blown up the size of their cortex. It may have been the emergence of the [learn drive](https://supermemo.guru/wiki/Learn_drive) that suddenly allowed better usage of the expensive increase in the number of brain cells. Before there was the [learn drive](https://supermemo.guru/wiki/Learn_drive), adding brain size might leave an animal with an extra head weight to carry and an extra set of cells to feed. Without the [learn drive](https://supermemo.guru/wiki/Learn_drive), the extra brain space might remain unused and likely undergo wasteful atrophy. If schooling attempts to override the [learn drive](https://supermemo.guru/wiki/Learn_drive), it will contribute to the disuse of that evolutionary advantage. It will contribute to society that is less smart and less creative.
 
@@ -564,7 +608,9 @@ The late arrival of the [learn drive](https://supermemo.guru/wiki/Learn_drive) i
 
 [学习内驱力](https://supermemo.guru/wiki/Learn_drive)在进化中的姗姗来迟表明，它不是神经网络中出现的简单功能（参见：[Biederman](https://supermemo.guru/wiki/Biederman_model) 模型）。否则，它可能很容易出现在鱼类或更早的时候。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)需要一组专用的神经结构，这些神经结构能够在检测到对陈述性知识的连贯结构的增量贡献时，发送奖励信号。这种信号和潜在结构可能在程序性学习和陈述性学习中有所不同。对于不同类别的感官输入，它也可能有所不同。
 
-### 6.16.3 Procedural learning reward程序性学习奖励
+### 6.16.3 Procedural learning reward
+
+### 程序性学习奖励
 
 I hypothesized about [circuits that might run procedural learning](http://www.super-memory.com/english/ol/ol_files/refinement_circuitry_in_stochastic_learning.jpg) back in the 1980s. In my [Master's Thesis](http://super-memory.com/english/ol.htm), out of ignorance, I used my own term ["*stochastic learning*"](http://www.super-memory.com/english/ol/ol_memory.htm). I had no idea that two decades earlier, back in 1969, David Marr proposed a theoretical model of the cerebellar cortex that fit my own thinking. In the new millennium, [there is a lot of data to confirm the model](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2805361/).
 
@@ -582,7 +628,9 @@ In a similar fashion, with each sentence typed on the computer, you will strike 
 
 以类似的方式，在计算机上键入每个句子时，你的打字错误会越来越少。你知道键盘上的「)」在哪里吗？「}」呢？你打字越流畅，你就越有可能忘记这个细节。当有意识地控制动作顺序消失后时，键盘上「)」位置的陈述性知识可能作为「垃圾」被丢弃。它不再被需要了。
 
-### 6.16.4 Declarative learning reward陈述性学习奖励
+### 6.16.4 Declarative learning reward
+
+### 陈述性学习奖励
 
 Things are a bit more complex in explaining declarative learn drive. There is a definite reward to declarative learning. Some things are just interesting, and finding out the truth is pleasing. At the neural level, the brain will scan inputs and neural activations to look for areas of high learntropy with maximum delivery of new knowledge matching the current status of memory. Any meaningful message of low probability will be deemed more attractive. A bright fractal pattern will be deemed beautiful. A gray randomness of colors will be deemed boring. The same will occur in the case of a more complex visual message. A vibrant forest is beautiful. The same forest may seem unattractive in winter, in draught, or under the impact of environmental pollution. [Steven Pinker](https://en.wikipedia.org/wiki/Steven_Pinker) remarked that we are attracted to images that ooze vitality. I disagree. The attraction is much wider. We may be equally well attracted to a deathly volcano or a frozen landscape of Antarctica. We love environments, signals, messages, or brain activations that can express complex information using simple models. The picture of a beautiful beach can be represented by a couple of simple shapes and textures.
 
@@ -596,7 +644,9 @@ The whole learn drive is based on seeking effective ways of representing knowled
 
 整个[学习内驱力](https://supermemo.guru/wiki/Learn_drive)都是建立在寻找有效的神经网络知识表示方法的基础上的。学习内驱力、睡眠中的记忆优化和遗忘对于最大限度地提高可压缩性、抽象性、可用性和性能至关重要。这就是大脑如何通过简单的表示来确保我们能够看到一个复杂的世界。这是人类智力的核心。如果人工智能研究人员能够为机器人配备类似人类的学习内驱力，只要有足够的记忆空间，他们的学习能力可能是取之不尽用之不竭的。
 
-### 6.16.5 Reward centers in learning学习中的奖励中心
+### 6.16.5 Reward centers in learning
+
+### 学习中的奖励中心
 
 In 2014, researchers reported that the [activity in the nucleus accumbens was increased in the state of "high curiosity"](https://supermemo.guru/wiki/Curiosity_improves_learning). They have also demonstrated what we have always known: this state improved memory performance. In addition, that improved performance spilled onto incidental learning, i.e. learning that would not spark curiosity on its own. This research was widely reported in media with a wrong interpretation: "*curiosity primes the brain for better memory*". For example, Scientific American headlined "*Neuroimaging reveals how the brain’s reward and memory pathways prime inquiring minds for knowledge*". The paper itself suggested the need for *"stimulating curiosity"*.
 
@@ -873,7 +923,9 @@ On the other hand, most of students of this world suffer of no fault of their ow
 
 **Students of the world unite!** You no longer need to suffer the pain of learning. If you suffer, you have your basic student right to protest. If you suffer, something is going wrong! You can stop learning! If anyone demands learning from you, and you do not enjoy it, you can strike back, and demand pleasurable learning! This is not your elitist hedonistic weak heart demand. This is a demand of reason. **No pleasure, no learning!** Your suffering is a waste of time, a waste of health, and a waste of human global resources!
 
-## 6.25 Summary: Pleasure of learning总结：学习的快乐
+## 6.25 Summary: Pleasure of learning
+
+## 总结：学习的快乐
 
 - human brain naturally tunes in to "interesting information" in the environment
 - 人类大脑自然地适应环境中的「有趣的信息」。
