--- a/我再也不会把孩子送去学校/03.Brain science脑科学.md
+++ b/我再也不会把孩子送去学校/03.Brain science脑科学.md
@@ -1,4 +1,6 @@
-# 3 Brain science脑科学
+# 3 Brain science
+
+# 脑科学
 
 The strongest argument against schooling comes from neuroscience. One of the most fundamental forces that can shape education is the **learn drive**. Understanding learn drive is essential for the realization that [self-directed](https://supermemo.guru/wiki/Self-directed_learning), [self-paced](https://supermemo.guru/wiki/Self-paced_learning) [self-learning](https://supermemo.guru/wiki/Self-learning) is the most efficient way of developing a knowledgeable and creative mind. The neural principles of reward in the learn drive lead me to the formulation of the [Fundamental law of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fundamental_law_of_learning). I hope no kid will ever accept any violation of that law.
 
