--- a/我再也不会把孩子送去学校/05.Effect of schooling on the learn drive学校教育对学习内驱力的影响.md
+++ b/我再也不会把孩子送去学校/05.Effect of schooling on the learn drive学校教育对学习内驱力的影响.md
@@ -1,10 +1,14 @@
-# 5 Effect of schooling on the learn drive学校教育对学习内驱力的影响
+# 5 Effect of schooling on the learn drive
+
+# 学校教育对学习内驱力的影响
 
 Coercive schooling suppresses the learn drive and results in diminished long-term effect of learning.
 
 强制性的学校教育抑制了学生的学习内驱力，降低了学生的长期学习效果。
 
-## 5.1 学习内驱力与年龄
+## 5.1 Learn drive vs. age
+
+## 学习内驱力与年龄
 
 **The learn drive is a vital instinct that underlies the adaptive development of the central nervous system**. Babies scan their environment for elements of novelty. This is a way of searching for and detecting things that are worth learning. A baby may randomly search the space above its head until it finds a moving object. This object may be classified as novelty from which a child can learn something. At a certain stage of development, the baby will taste all objects around it in order to learn what might be edible. A kid in a room of toys will zero in on a toy that he will deem as a best satisfier of young mind's curiosity. The [learn drive](https://supermemo.guru/wiki/Learn_drive) is a powerful brain mechanism that gave babies their label of [never-ceasing perfect learning machines](https://supermemo.guru/wiki/How_baby_brain_does_not_work).
 
@@ -18,7 +22,9 @@ Some scientists believe that we innately lose our novelty seeking and our [learn
 >
 > 理解学习[内驱力](https://supermemo.guru/wiki/Learn_drive)和它被认为随着时间推移而下降的机制是[优化教育](https://supermemo.guru/wiki/Optimization_of_education)的关键。
 
-## 5.2 Learn drive vs. knowledge学习内驱力与知识
+## 5.2 Learn drive vs. knowledge
+
+## 学习内驱力与知识
 
 **The main factor that undermines the learn drive with age is the established knowledge**. There are also secondary factors such as (1) declining "attractive power" of the current knowledge and (2) the actual aging of the brain. Aging may result in a decline in neural networks, synaptic pruning, lesser mental energy, etc. Those can be largely prevented with mental hygiene and learning itself. It is possible to retain the [learn drive](https://supermemo.guru/wiki/Learn_drive) and passion for learning till the age of hundred. With healthy lifestyle, it is easier to retain vitality of the brain than it is to retain, for example, the vitality of the motor system.
 
@@ -40,7 +46,9 @@ The good news coming from our understanding of the [learn drive](https://superme
 
 我们对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的理解带来的好消息是，学习内驱力可以在终生的激情教育中起作用。80 岁的时候学习和 15 岁的时候一样有趣。
 
-## 5.3 Learn drive vs. learning学习内驱力与学习
+## 5.3 Learn drive vs. learning
+
+## 学习内驱力与学习
 
 The main trick we can employ in keeping the learning passion alive is constant learning itself. Learning fills up the brain with new knowledge. However, it also identifies and magnifies the areas of ignorance. By an appropriate selection of the learning material, we can constantly look for new areas to fill up. This is best done with [self-directed learning](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning). Only a learner herself can effectively identify the areas of knowledge, the areas of ignorance, and the areas in-between that are suitable for learning.
 
@@ -62,7 +70,9 @@ This is one of the biggest ailments of schooling: students keep complaining that
 
 这是学校教育的最大弊病之一：学生们总是抱怨学校太无聊或太辛苦。学生们不快乐，这与系统背道而驰。如果我们保持旧的课堂学习制度，这个问题就不能被有效地解决。在一个总是因为不同的激情、不同的兴趣、不同的天赋、不同的学习速度而导致知识差异的群体中，优化学习是不可能的。唯一有效的优化解决方案是[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。
 
-## 5.4 Teacher problem老师的困境
+## 5.4 Teacher problem
+
+## 老师的困境
 
 A well-intentioned teacher may also contribute to the suppression of the learn drive even while facilitating self-directed learning.
 
@@ -90,7 +100,9 @@ This does not mean we should leave all questions unanswered. There are two facto
 1. 那个孩子已经发了疯地想知道且他的好奇心已经被激发到了极点。从增殖和巩固的角度来看，不会有太多收获。学习内驱力种子的新分支将会出现，并促使进一步的探究。
 2. 这个问题具有高度基础性，因为它是许多其他重要知识的基础，而这些知识可能很难或只能缓慢地靠自学得到。基本问题具有普遍性，并通过学习进入新领域而得到重新巩固。它们只是在探索中不断出现。
 
-## 5.5 Learn drive distortions学习内驱力扭曲
+## 5.5 Learn drive distortions
+
+## 学习内驱力扭曲
 
 There are dangers and inherent inefficiencies in the learn drive guidance system. It can easily be tricked into seeing novelty in areas which we would not classify as desirable. For an average student, the game of checkers quickly gets boring. To a sophisticated mind, a game of chess is more fun but it also may easily get boring. To a grandmaster, who can see chess as a colorful pattern of chessboard combinations with mnemonic stories that rival the most interesting book of history, chess may be a never-ending source of fascination. In other words, a chessboard and a few chess pieces can feed novelty seeking system with rewarding stimuli for eternity.
 
@@ -112,7 +124,9 @@ For many kids with talents, [self-directed learning](https://supermemo.guru/wiki
 
 对于许多有天赋的孩子来说，[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)是他们腾飞所需要的。对于所有寻求有价值知识的孩子来说，通用的方法是，**在任何校正系统的引导下[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。**这个校正者可以是父母、老师或同龄人（包括年长的同龄人）。学习轨迹校正器需要**在[最佳推动区](https://supermemo.guru/wiki/Push_zone)**，以确保正确的学习轨迹而又不会扰乱系统。当然，没有比成熟的自我意识更好的校正者，只有一点自律。受过教育的成年人应该理解终身学习的必要性，并理解学习进步的正确方向。理想情况下，生活本身是学习轨迹的最佳校正器。
 
-## 5.6 School enthusiasm上学热情
+## 5.6 School enthusiasm
+
+## 上学热情
 
 School suppresses the [learn drive](https://supermemo.guru/wiki/Learn_drive) and it may result in dangerous long-term neural adaptation that may skew young personalities for life. I write about it in the [following section](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive).
 
@@ -126,9 +140,13 @@ School suppresses the [learn drive](https://supermemo.guru/wiki/Learn_drive) and
 >
 > 历史总是惊人的相似，我怀着极大的期望和快乐的期待开始了我所有的学校生活。小学、中学和我的两所大学都是这样。在所有情况下，热情都很快消失了。通常在第一天或第一堂课之后！然而，有时会出现相反的过程。当我因为纪律原因被一所学校开除时，我来到了一所期望值最低的新学校。这实际上帮助我提升了一段时间的热情。在一位[好老师](https://supermemo.guru/wiki/Great_teachers_change_the_world)的帮助下，我度过了几个月的学校历险。同样，一位伟大的老师或[自我导向学习的自由](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)在后来帮助我从学校中获得了一些乐趣。如果我在波兰的学校里一遍又一遍地模拟我自己的生活，大部分时间我都会失去对学习的热爱。与之相反的快乐过程只留给少数幸运的人，他们遇到了幸运的环境或幸运的自己的倾向。
 
-## 5.7 Powering learn drive with SuperMemo用 SuperMemo 加强学习内驱力
+## 5.7 Powering learn drive with SuperMemo
 
-### 5.7.1 Enhancing the learn drive增强学习内驱力
+## 用 SuperMemo 加强学习内驱力
+
+### 5.7.1 Enhancing the learn drive
+
+### 增强学习内驱力
 
 > SuperMemo insert. [What is SuperMemo?](https://supermemo.guru/wiki/What_is_SuperMemo%3F)
 >
@@ -146,7 +164,9 @@ School suppresses the [learn drive](https://supermemo.guru/wiki/Learn_drive) and
 > >
 > > [渐进学习](https://supermemo.guru/wiki/Incremental_learning)是[学习内驱力](https://supermemo.guru/wiki/Learn_drive)最强大的催化剂
 
-### 5.7.2 Stunting the learn drive阻碍学习内驱力
+### 5.7.2 Stunting the learn drive
+
+### 阻碍学习内驱力
 
 > SuperMemo insert. [What is SuperMemo?](https://supermemo.guru/wiki/What_is_SuperMemo%3F)
 >
@@ -160,7 +180,9 @@ School suppresses the [learn drive](https://supermemo.guru/wiki/Learn_drive) and
 > >
 > > 没有新材料的 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 跟学校里无聊的课程很相似。两者都抑制了[学习内驱力](https://supermemo.guru/wiki/Learn_drive)
 
-### 5.7.3 Learn drive at middle age中年时期的学习内驱力
+### 5.7.3 Learn drive at middle age
+
+### 中年的学习内驱力
 
 Instead of noticing a decline in my own learning passions, I observe the reverse. This is why I violently disagree with researchers who tend to attribute the decline in [learn drive](https://supermemo.guru/wiki/Learn_drive) to chronological age. I employ [incremental learning](https://supermemo.guru/wiki/Incremental_learning) to keep my passion for learning alive. I explain how it works for me in a personal note below.
 
@@ -210,7 +232,9 @@ Instead of noticing a decline in my own learning passions, I observe the reverse
 >
 > 像一个不成熟的学生一样，我也厌倦过间隔重复和记忆，说「*在这个领域没有什么可学习或发现的*」。我的同事，尤其是 Krzysztof Biedalak 和 Janusz Murakowski ，给了我一个小小的校正推送，说「*[双变量记忆模型](http://www.super-memory.com/english/2vm.htm)可以使算法更简单，更容易实现、许可和推广*」。当我开始探索这个干涸的领域，我就发现了无数我不知道的东西，并重新点燃了我对间隔重复的热情。讽刺的是，这个算法并没有变得那么简单，但事实是，熄灭的激情可以被重新点燃。
 
-## 5.8 Perpetual learn drive永恒的学习内驱力
+## 5.8 Perpetual learn drive
+
+## 永恒的学习内驱力
 
 Passions come and wane. This process is controllable. [Self-directed learning](https://supermemo.guru/wiki/Self-directed_learning) is the best expression of that control. Spaced repetition helps retain gains from waning passions. This, in turn, helps passion re-awakening in need.
 
@@ -224,7 +248,9 @@ The process of building up enthusiasm for learning is easily trainable and easil
 
 培养学习热情的过程很容易训练，也很容易被抑制。在这有很强的与神经系统有关的成分。糟糕的教育造成的损害是可逆的，一个人可以远远超过他或她最初的基线。然而，一些最初的潜力可能永远失去。
 
-## 5.9 Summary: Changes to the learn drive总结: 改变学习内驱力的因素
+## 5.9 Summary: Changes to the learn drive
+
+## 总结: 改变学习内驱力的因素
 
 - [learn drive](https://supermemo.guru/wiki/Learn_drive) is not subject to aging beyond natural aging of the brain
 - [学习内驱力](https://supermemo.guru/wiki/Learn_drive)不受大脑自然老化的影响
